--- a/naunet/templates/patches/enzo/hydro_rk/Grid_CollapseMHD3DInitializeGrid.C.j2
+++ b/naunet/templates/patches/enzo/hydro_rk/Grid_CollapseMHD3DInitializeGrid.C.j2
@@ -101,7 +101,8 @@ int grid::CollapseMHD3DInitializeGrid(int n_sphere,
   int DeNum, HINum, HIINum, HeINum, HeIINum, HeIIINum, HMNum, 
       H2INum, H2IINum, DINum, DIINum, HDINum;
 #ifdef USE_NAUNET
-  int {{ declare | stmwrap(80, 6) }};
+  {% set specnum = species.network_diff_grackle | map(attribute='alias') | map('suffix', "Num") -%}
+  int {{ specnum | join(", ") | stmwrap(80, 6) }};
 #endif
 
   if (MultiSpecies) {
@@ -122,10 +123,12 @@ int grid::CollapseMHD3DInitializeGrid(int n_sphere,
       FieldType[HDINum  = NumberOfBaryonFields++] = HDIDensity;
     }
 #ifdef USE_NAUNET
+	  {# FieldType[{{ "{:<12}".format(s.alias + "Num") }} = NumberOfBaryonFields++] = {{ s.alias }}Density; #}
     if (MultiSpecies == NAUNET_SPECIES) {
-      {% for f in addfieldtype -%}
-      {{ f }};
-      {% endfor -%}
+      {% for s in species.network_diff_grackle -%}
+      FieldType[{{ s.alias + "Num" }}  = NumberOfBaryonFields++] = {{ s.alias }}Density;
+      {% endfor %}
+
     }
 #endif
   }
