--- a/naunet/templates/patches/enzo/hydro_rk/Grid_CollapseMHD3DInitializeGrid.C.j2
+++ b/naunet/templates/patches/enzo/hydro_rk/Grid_CollapseMHD3DInitializeGrid.C.j2
@@ -123,10 +123,9 @@ int grid::CollapseMHD3DInitializeGrid(int n_sphere,
       FieldType[HDINum  = NumberOfBaryonFields++] = HDIDensity;
     }
 #ifdef USE_NAUNET
-	  {# FieldType[{{ "{:<12}".format(s.alias + "Num") }} = NumberOfBaryonFields++] = {{ s.alias }}Density; #}
     if (MultiSpecies == NAUNET_SPECIES) {
       {% for s in species.network_diff_grackle -%}
-      FieldType[{{ s.alias + "Num" }}  = NumberOfBaryonFields++] = {{ s.alias }}Density;
+      FieldType[{{ "{:<12}".format(s.alias + "Num") }} = NumberOfBaryonFields++] = {{ s.alias }}Density;
       {% endfor %}
 
     }
