--- a/naunet/templates/odeint/include/naunet_constants.h.j2
+++ b/naunet/templates/odeint/include/naunet_constants.h.j2
@@ -1,1 +1,6 @@
+#ifndef __NAUNET_CONSTANTS_H__
+#define __NAUNET_CONSTANTS_H__
+
 // {% extends "base/cpp/include/naunet_constants.h.j2" %}
+
+#endif
