--- a/naunet/templates/cvode/include/naunet_constants.h.j2
+++ b/naunet/templates/cvode/include/naunet_constants.h.j2
@@ -1,6 +1,6 @@
 #ifndef __NAUNET_CONSTANTS_H__
 #define __NAUNET_CONSTANTS_H__
 
-// {% extends "base/cpp/include/naunet_constants.h.j2" %}
+// {% include "base/cpp/include/naunet_constants.h.j2" %}
 
 #endif
