--- a/naunet/templates/cvode/include/naunet_timer.h.j2
+++ b/naunet/templates/cvode/include/naunet_timer.h.j2
@@ -1,6 +1,6 @@
 #ifndef __NAUNET_TIMER_H__
 #define __NAUNET_TIMER_H__
 
-// {% extends "base/cpp/include/naunet_timer.h.j2" %}
+// {% include "base/cpp/include/naunet_timer.h.j2" %}
 
 #endif
