--- a/naunet/templates/odeint/include/naunet_physics.h.j2
+++ b/naunet/templates/odeint/include/naunet_physics.h.j2
@@ -1,6 +1,6 @@
 #ifndef __NAUNET_PHYSICS_H__
 #define __NAUNET_PHYSICS_H__
 
-// {% extends "base/cpp/include/naunet_physics.h.j2" %}
+// {% include "base/cpp/include/naunet_physics.h.j2" %}
 
 #endif
