--- a/naunet/templates/data/COshielding_11.2bH2_5e20nH.dat.j2
+++ b/naunet/templates/data/COshielding_11.2bH2_5e20nH.dat.j2
@@ -1,6 +1,6 @@
 // Table of CO self-shielding factor
 // Excitation temperature
-{% if device == "gpu" %}
+{% if general.device == "gpu" %}
 __device__
 {% else %}
 const
@@ -11,7 +11,7 @@ double COShieldingTableX[5] =
 {% endraw %}
 
 // H2 column density
-{% if device == "gpu" %}
+{% if general.device == "gpu" %}
 __device__
 {% else %}
 const
@@ -27,7 +27,7 @@ double COShieldingTableY[41] =
 {% endraw %}
 
 // CO column density
-{% if device == "gpu" %}
+{% if general.device == "gpu" %}
 __device__
 {% else %}
 const
@@ -43,7 +43,7 @@ double COShieldingTableZ[46] =
  2.512e+18, 3.981e+18, 6.310e+18, 1.000e+19};
 {% endraw %}
 
-{% if device == "gpu" %}
+{% if general.device == "gpu" %}
 __device__
 {% else %}
 const
