--- a/naunet/templates/cvode/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/CMakeLists.txt.j2
@@ -25,7 +25,11 @@ message(STATUS "CMAKE_BUILD_TYPE           = ${CMAKE_BUILD_TYPE}"          )
 
 set(SUNDIALS_MIN_VERSION "5.6.1")
 set(SUNDIALS_DIR "" CACHE PATH "Path to SUNDIALSConfig.cmake")
+{% if general.method == "dense" %}
+find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} CONFIG)
+{% else %}
 find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} REQUIRED CONFIG)
+{% endif %}
 
 message(STATUS "SUNDIALS_FOUND             = ${SUNDIALS_FOUND}")
 
@@ -45,16 +49,18 @@ if (NOT SUNDIALS_FOUND)
     )
 
     set(_IMPORT_PREFIX ${PROJECT_SOURCE_DIR}/external/sundials)
+    include_directories("${_IMPORT_PREFIX}/include")
+
     add_library(SUNDIALS::nvecserial SHARED IMPORTED)
     set_target_properties(SUNDIALS::nvecserial PROPERTIES
-        INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include"
+        # INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include"
         IMPORTED_LOCATION "${_IMPORT_PREFIX}/lib/libsundials_nvecserial.so"
     )
     add_dependencies(SUNDIALS::nvecserial sundials_project)
 
     add_library(SUNDIALS::cvode SHARED IMPORTED)
     set_target_properties(SUNDIALS::cvode PROPERTIES
-        INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include"
+        # INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include"
         IMPORTED_LOCATION "${_IMPORT_PREFIX}/lib/libsundials_cvodes.so"
     )
     add_dependencies(SUNDIALS::cvode sundials_project)
