--- a/naunet/templates/tests/minimal/singlegrid.cpp.j2
+++ b/naunet/templates/tests/minimal/singlegrid.cpp.j2
@@ -12,5 +12,6 @@
         y[i] = 1.e-40;
     }
     y[IDX_HI]  = nH;
-    y[IDX_C2I] = 7.0e-5 * nH;
+    y[IDX_CI]  = 7.0e-5 * nH;
+    y[IDX_CHI] = 7.0e-5 * nH;
 {% endblock initial_abundance %}
